# libescdf

./: .gitignore  .gitlab-ci.yml  .mailmap  .update-copyright.conf  AUTHORS  Doxyfile  Makefile.am  README.md  TODO  _config.yml  autogen.sh  check_group_test_file_root.h5  configure.ac  index.html  quickcheck.sh  wipeout.sh
config/data/: escdf-config.yml  escdf-config.yml.in  escdf.pc  escdf.pc.in  libescdf-config.yml.in  libescdf.pc.in
config/m4/: escdf_search_check.m4  hdf5.m4  mpi.m4  netcdf.m4
doc/: Makefile.am  configuring-libescdf.md  contributing-to-libescdf.md  developers.txt  hacking-the-build-system.md
doc/data/: escdf_footer.html  escdf_header.html
doc/homepage/: index.html
escdf_references/: Makefile.am  empty.h5  grid_scalarfield_read.h5
examples/: Makefile  Makefile.am  density_example.c  grid_scalarfield.c  groups_example.c  groups_read_example  groups_read_example.c  read_example.c  write_example.c
src/: Calling_Sequence.txt  Makefile.am  attributes.c  attributes.def  attributes.h  attributes_def.json  check_attributes.c  check_escdf  check_escdf.c  check_escdf.h  check_escdf_attributes.c  check_escdf_datasets.c  check_escdf_error.c  check_escdf_geometry.c  check_escdf_grid_scalarfields.c  check_escdf_group.c  check_escdf_handle.c  check_escdf_info.c  check_escdf_system.c  check_group_test_file_path.h5  check_group_test_file_root.h5  check_utils.c  check_utils_hdf5.c  datasets_notes.txt  escdf.c  escdf.h  escdf_HL.h  escdf_attributes.c  escdf_attributes.h  escdf_attributes_ID.h  escdf_attributes_specs.h  escdf_common.h  escdf_datasets.c  escdf_datasets.h  escdf_datasets_ID.h  escdf_datasets_specs.h  escdf_datatransfer.c  escdf_datatransfer.h  escdf_densities.c  escdf_densities.h  (+35 more)
src/OBSOLETE/: escdf_densities.c  escdf_densities.h  escdf_system.c  escdf_system.h  generate_groups_from_JSON.py
utils/: build-mpi-debian.sh  build-mpi-opensuse.sh  build-serial-debian.sh  build-serial-opensuse.sh
